--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,9 @@ package_dir =
 
 include_package_data = True
 install_requires =
+    requests
     pulsar-client
-    sudo pip3 install requests-toolbelt
+    requests-toolbelt
 
 [options.packages.find]
 where=src
