--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   pulsar:
     container_name: docker_pulsar_1
-    image: apachepulsar/pulsar:2.6.1
+    image: apachepulsar/pulsar-all:2.6.1
     command: bin/pulsar standalone
     volumes:
       - type: bind
